# Version History

## unreleased

## 0.20.1

- WOM-273: Pin poetry version in readthedocs.yml
- WOM-274: Mark tests where Abort is used as xfail

## 0.20.0

- [WOM-265]: Deprecate max_workers for TaskExecutorComponentManager
- [WOM-266]: Revert LRC attribute size to 64 queued commands
- [WOM-211]: Add commandedState and commandedObsState attributes
- [MCCS-1993]: Update to use latest version of ska-control-model
- [WOM-212]: Add longRunningCommandInProgress attribute

## 0.19.3

- [WOM-213] Limit input queue size for long running commands
- [WOM-177] Fix push_change_event and push_archive_event to expose the official PyTango interface

## 0.19.2

- [LOW-614] remove DevInt, removed in cppTango/PyTango 9.5.0
- [KAR-585] Improve docs to reflect input queue updates

## 0.19.1

- [MCCS-1695] workaround for pytango 9.4.2 logging interface change

## 0.19.0

- [MCCS-1636] Use ska-ser-sphinx-theme for documentation
- [KAR-632] Unpinned numpy requirements. Bumped minimum Python version to 3.8
- [KAR-587] Input queue updates

## 0.18.1

- [MCCS-1494] Bug fixes to subarray subclassing following addition of JSON validation support
- [KAR-497] Further task callback parameters bug fixes
- [MCCS-1579] Strict type-checking, leading to bug fixes in task callback parameters
  and subarray resource pool checking

## 0.18.0

- [MCCS-1424] JSON validation support

## 0.17.0

- [MCCS-1358] Remove CSP-specific content (into separate ska-csp-lmc-base repo)

## 0.16.1

- [LOW-418] Remove redundant production Dockerfile, relax pytango constraint
- [LOW-415] Complete linting and type-hinting

## 0.16.0

- [MCCS-1312] Update to pytango 9.3.6

## 0.15.0

- [MCCS-1208] Allow Abort() from RESOURCING, Off() from FAULT

## 0.14.0

- [LOW-346] Provide polling mechanism as alternive concurrency mechanism
  to task executor

## 0.13.6

- Updated numpy version

## 0.13.5

- Merge branch 'rel-275-v0-13-5' into 'main'
- [REL-275] Prepare to release 0.13.5
- [REL-275] Fix pipeline

## 0.13.4
