@@ -14,7 +14,7 @@ build:
     python: "3.10"
   jobs:
     post_create_environment:
-      - pip install poetry==1.8.2
+      - pip install poetry>=1.8.2
     post_install:
       - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH poetry install --only docs
 
